# android_kernel_google_zumapro

./: .gitignore  BUILD.bazel  Kbuild  Kconfig  Kconfig.ext  Kconfig.ext_modules  Makefile  OWNERS  aiutils.c  aoc.c  aoc.h  aoc_v1.c  auth13.c  auth22-ake.c  auth22-lc.c  auth22-ske.c  auth22-stream.c  auth22.c  bcl.h  bcm_app_utils.c  bcmwifi_channels.c  bcmxtlv.c  bigo_iommu.c  bigo_of.c  bigo_pm.c  bigo_priv.h  build.config.zumapro  build.config.zumapro.gki.fragment  build_caimito.sh  callisto-mcu.c  cp_pmic.c  cpif_tp_monitor.h  dhd_bus.h  dhd_cdc.c  dhd_custom_cis.c  dhd_dbg.h  dhd_linux_priv.h  dhd_linux_rx.c  dhd_linux_tx.c  dhd_mschdbg.c  (+162 more)
alsa/: BUILD.bazel  Makefile  aoc_alsa.h  aoc_alsa_compr.c  aoc_alsa_ctl.c  aoc_alsa_drv.c  aoc_alsa_hw.c  aoc_alsa_incall.c
google-devices/caimito/dts/: BUILD.bazel
google-devices/caimito/dts/google/: zuma-caiman-common.dtsi  zuma-caiman-display.dtsi  zuma-caiman-proto1-broadcom-gnss-i2cm.dts  zuma-caiman-touch.dtsi  zuma-caiman-wcharger.dtsi  zuma-caimito-battery.dtsi  zuma-caimito-camera-pmic.dtsi  zuma-caimito-common.dtsi  zuma-caimito-display.dtsi  zuma-caimito-gnss-samsung.dtsi  zuma-caimito-thermal.dtsi  zuma-caimito-typec.dtsi  zuma-caimito-usb.dtsi  zuma-caimito-usecases-evt.dtsi  zuma-caimito-wlan.dtsi  zuma-komodo-battery-data.dtsi  zuma-komodo-caiman-charging.dtsi  zuma-komodo-caiman-usecases.dtsi  zuma-komodo-display.dtsi  zuma-komodo-pmic.dtsi  zuma-komodo-proto-evt10-battery-data.dtsi  zuma-komodo-touch.dtsi  zuma-komodo-wcharger.dtsi  zuma-ripcurrent24-battery.dtsi  zuma-ripcurrent24-display.dtsi  zuma-ripcurrent24-sapwood-caimito-battery.dtsi  zuma-ripcurrent24-sapwood-caimito-common.dtsi  zuma-ripcurrent24-sapwood-komodo-caiman-common.dtsi  zuma-ripcurrent24-sapwood-komodo-caiman.dts  zuma-ripcurrent24-sapwood-tokay.dts  zuma-ripcurrent24-sapwood-wcharger.dtsi  zuma-ripcurrent24.dts  zuma-tokay-audio.dtsi  zuma-tokay-battery-data.dtsi  zuma-tokay-camera.dtsi  zuma-tokay-charging.dtsi  zuma-tokay-common.dtsi  zuma-tokay-connector.dtsi  zuma-tokay-ldaf.dtsi  zuma-tokay-proto1-broadcom-gnss.dts  (+31 more)
google-devices/zumapro/: BUILD.bazel  vendor_dlkm.blocklist.zumapro  vendor_kernel_boot_modules.zumapro
google-devices/zumapro/dts/: Makefile  zumapro-a0.dtsi  zumapro-a1-foplp.dts  zumapro-a1-ipop.dts  zumapro-board-bluetooth_legacy.dtsi  zumapro-board-gps.dtsi  zumapro-board-pcie-cp-s5300.dtsi  zumapro-board-pcie-cp-s5400-a1.dtsi  zumapro-board-pcie.dtsi  zumapro-common.dtsi  zumapro-cpu.dtsi  zumapro-debug.dtsi  zumapro-dma-heap.dtsi  zumapro-dpm-user.dts  zumapro-emulator.dts  zumapro-hybrid.dts  zumapro-phone-ignss.dtsi  zumapro-pinctrl.dtsi  zumapro-pmic.dtsi  zumapro-rmem-proto.dtsi  zumapro-tpu.dtsi  zumapro-usi.dtsi  zumapro.dtsi
google-modules/amplifiers/cs35l41/: BUILD.bazel  Makefile  cs35l41-i2c.c  cs35l41.c  cs35l41.h
google-modules/amplifiers/snd_soc_wm_adsp/: BUILD.bazel  wm_adsp.c  wm_adsp.h
google-modules/aoc_ipc/: BUILD.bazel
google-modules/display/common/gs_drm/: BUILD.bazel  Kbuild  Makefile
google-modules/display/common/gs_panel/: BUILD.bazel  Kbuild  Makefile  gs_panel.c  gs_panel_connector_funcs.c  gs_panel_funcs_defaults.c  gs_panel_internal.h  gs_panel_lhbm.c  gs_panel_sysfs.c
google-modules/display/panels/caimito/: BUILD.bazel  Makefile  panel-gs-cm4.c  panel-gs-km4.c  panel-gs-tk4a.c  panel-gs-tk4b.c  panel-gs-tk4c.c
google-modules/edgetpu/rio/drivers/edgetpu/: BUILD.bazel  Kbuild  Makefile  edgetpu-debug-dump.h  edgetpu-dump-info.h  edgetpu-external.c  edgetpu-firmware-util.c  edgetpu-firmware.h  edgetpu-google-iommu.c  edgetpu-gsa.h  edgetpu-ikv-mailbox-ops.c  edgetpu-ikv.c  edgetpu-internal.h  edgetpu-kci.h  edgetpu-mapping.h  edgetpu-mobile-platform.c  edgetpu-mobile-platform.h  edgetpu-pm.c  edgetpu-soc.h  edgetpu-sw-watchdog.c  edgetpu-telemetry.c  mobile-debug-dump.c  mobile-firmware.c  mobile-soc-gsx01.c  mobile-soc-gsx01.h  rio-debug-dump.c  rio-pm.c
google-modules/gxp/zuma/: BUILD.bazel  Kconfig  Makefile  callisto-platform.c  callisto-pm.c  gxp-bpm.h  gxp-client.h  gxp-common-platform.c  gxp-config.h  gxp-dci.c  gxp-debug-dump.h  gxp-dma.h  gxp-dmabuf.h  gxp-domain-pool.c  gxp-doorbell.h  gxp-eventfd.c  gxp-eventfd.h  gxp-firmware-data.c  gxp-firmware-data.h  gxp-firmware-loader.c  gxp-gsx01-mailbox.c  gxp-internal.h  gxp-lpm.h  gxp-mailbox-driver.h  gxp-mailbox-manager.c  gxp-mailbox.c  gxp-mailbox.h  gxp-mapping.c  gxp-mapping.h  gxp-mcu-firmware.c  gxp-mcu-fs.c  gxp-mcu-platform.c  gxp-mcu-telemetry.c  gxp-mcu.c  gxp-mcu.h  gxp-notification.h  gxp-pm.c  gxp-uci.h  gxp-vd.c  mobile-soc-gsx01.h  (+1 more)
google-modules/gxp/zuma/callisto/: config.h  csrs.h
google-modules/power/mitigation/: BUILD.bazel  google_bcl_core.c  google_bcl_debugfs.c  google_bcl_sysfs.c
google-modules/soc/gs/: BUILD.bazel  Kconfig.ext_modules
google-modules/soc/gs/drivers/bts/: exynos-bts.c
google-modules/soc/gs/drivers/cpufreq/: exynos-acme.c  exynos-acme.h
google-modules/soc/gs/drivers/iommu/: Kbuild  Kconfig  exynos-pcie-iommu-exp.h  exynos-pcie-iommu-zuma.c  iovad-best-fit-algo.c  samsung-iommu-v9.c  samsung-iommu-v9.h  samsung-iommu.c
google-modules/soc/gs/drivers/mfd/: Kbuild  s2mpg10-core.c
google-modules/soc/gs/drivers/pwm/: Kbuild
google-modules/soc/gs/drivers/regulator/: Kconfig  rt6160-regulator.c  s2mpg15-powermeter.c
google-modules/soc/gs/drivers/rtc/: Kconfig
google-modules/soc/gs/drivers/spi/: spi-s3c64xx.c
google-modules/soc/gs/drivers/ufs/: Kbuild  Kconfig  ufs-exynos-crypto.c  ufs-exynos-gs.h  ufs-exynos-swkeys.c  ufs-pixel-crypto.h  ufs-pixel-fips-exynos.c  ufs-pixel-fips-swkeys.c  (+3 more)
google-modules/touch/synaptics/syna_c10/: BUILD.bazel  Kbuild  syna_tcm2.c  syna_tcm2.h  syna_tcm2_sysfs.c
misc/: BUILD.bazel  gvotable.c  logbuffer.c
panels/: BUILD.bazel  panel-gs-simple.c
tas25xx/: BUILD.bazel  Makefile
tas25xx/algo/platform/exynos/: tas25xx-algo-exynos-dsp-intf.c
tas25xx/algo/src/: tas25xx-algo-intf.c  tas25xx-algo-kbin-intf.c
tas25xx/inc/: tas25xx-regbin-parser.h  tas25xx.h
tas25xx/src/: tas25xx-codec.c  tas25xx-misc.c  tas25xx-regbin-parser.c  tas25xx.c
(+1225 files in other folders)
